Nueva version deL Blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hola,Bienvenido a Hyperblog 2.o</title>
+        <title>Hola Friend ,Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
